[package]
name = "wakerset"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinned-aliasable = "0.1.3"
arrayvec = { version = "0.7", no-default-features = true }

[dev-dependencies]
anyhow = "1"
futures = { version = "0.3", no-default-features = true }
static_assertions = "1.1"
tokio = { version = "1.37", features = ["rt-multi-thread"] }
pinned-mutex = "0.1"
pin-project = "1"
