[package]
name = "wakerset"
version = "0.2.5"
authors = ["Chad Austin <chad@chadaustin.me>"]
edition = "2021"
rust-version = "1.77"
license = "MIT"
description = "no_std, no_alloc storage of Wakers embedded in the Future type"
repository = "https://github.com/chadaustin/wakerset"
keywords = ["async", "waker", "no_std"]
categories = ["no-std", "no-std::no-alloc", "concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.panic-abort]
inherits = "release-with-debug"
panic = "abort"

[dependencies]
arrayvec = { version = "0.7", default-features = false }

[dev-dependencies]
anyhow = "1"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
static_assertions = "1.1"
tokio = { version = "1.37", features = ["rt-multi-thread"] }
pinned-mutex = "0.3.2"
pin-project = "1"
divan = "0.1.16"

[[bench]]
name = "bench"
harness = false
